--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>LTalk</title>
+  <title>LTalk | Login</title>
   <link rel='stylesheet prefetch' href='src/css/reset.min.css'>
   <link rel='stylesheet prefetch' href='src/css/fonts.googleapis.css.css'>
   <link rel='stylesheet prefetch' href='plugins/font-awesome/css/font-awesome.min.css'>
