--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>LTalk</title>
+	<title>LTalk | Index</title>
 	<link rel="stylesheet" href="src/css/index.css">
 </head>
 <body>
