--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
 	<!-- <h1>LTalk</h1> -->
 	<div class="head">
-		<div class="statistics">
-			<p>在线人数：<span></span></p>
-		</div>
 	</div>
 	<div class="all">
-		<div class="user-info"></div>
+		<div class="user-info">
+			<div class="statistics">
+				<p>在线人数<span></span></p>
+			</div>
+		</div>
 		<div class="friend">
 			<div class="friend-top">
 				<div class="friend-top-left">好友 <i class="fa fa-plus-square add-friends"></i></div>
