--- a/login.html
+++ b/login.html
@@ -74,8 +74,11 @@
 
   <script type="text/javascript" src="src/js/jquery.min.js" ></script>
   <script type="text/javascript" src="src/js/config.js" ></script>
+  <script type="text/javascript" src="src/js/common.js" ></script>
   <script type="text/javascript" src="plugins/layer/layer.js" ></script>
   <script type="text/javascript" src="src/js/login.js"></script>
+
+
 </body>
 
 </html>
