--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 					</li>
 					<li>
 						<p>
-							<font style="float: right;">lostsky2：</font>
-							<span style="float: right;">
+							<font style="float: right;text-align: right;">：lostsky2</font>
+							<span style="float: right;text-align: right;">
 								3333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333
 							</span>
 						</p>
@@ -90,8 +90,8 @@
 					</li>
 					<li>
 						<p>
-							<font style="float: right;">lostsky2：</font>
-							<span style="float: right;">
+							<font style="float: right;text-align: right;">：lostsky2</font>
+							<span style="float: right;text-align: right;">
 								555555555555555555555555555555555健身房还多久卡萨返回看电视副科级的火山口服活动结束开发换角色看到回复金卡戴珊焚枯食淡和福克斯地方斯蒂芬
 							</span>
 						</p>
@@ -114,8 +114,8 @@
 					</li>
 					<li>
 						<p>
-							<font style="float: right;">lostsky2：</font>
-							<span style="float: right;">
+							<font style="float: right;text-align: right;">：lostsky2</font>
+							<span style="float: right;text-align: right;">
 								555555555555555555555555555555555健身房还多久卡萨返回看电视副科级的火山口服活动结束开发换角色看到回复金卡戴珊焚枯食淡和福克斯地方斯蒂芬
 							</span>
 						</p>
@@ -138,8 +138,8 @@
 					</li>
 					<li>
 						<p>
-							<font style="float: right;">lostsky2：</font>
-							<span style="float: right;">
+							<font style="float: right;text-align: right;">：lostsky2</font>
+							<span style="float: right;text-align: right;">
 								555555555555555555555555555555555健身房还多久卡萨返回看电视副科级的火山口服活动结束开发换角色看到回复金卡戴珊焚枯食淡和福克斯地方斯蒂芬
 							</span>
 						</p>
@@ -162,8 +162,8 @@
 					</li>
 					<li>
 						<p>
-							<font style="float: right;">lostsky2：</font>
-							<span style="float: right;">
+							<font style="float: right;text-align: right;">：lostsky2</font>
+							<span style="float: right;text-align: right;">
 								555555555555555555555555555555555健身房还多久卡萨返回看电视副科级的火山口服活动结束开发换角色看到回复金卡戴珊焚枯食淡和福克斯地方斯蒂芬
 							</span>
 						</p>
@@ -186,6 +186,134 @@
 		<div class="world">
 			<div class="talk-top">
 				<div class="talk-name">LTalk!</div>
+			</div>
+			<div class="talk-content">
+				<ul>
+					<li>
+						<p>
+							<font>lostsky2：</font>
+							<span>
+								111111111111111111111111111111111111111111111111111111
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font>lostsky2：</font>
+							<span>
+								2222222222222222222222222222222222222222222
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font style="float: right;text-align: right;">：lostsky2</font>
+							<span style="float: right;text-align: right;">
+								3333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333333
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font>lostsky2：</font>
+							<span>
+								44444444444444444444444444444444444444444444444444444444444444
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font style="float: right;text-align: right;">：lostsky2</font>
+							<span style="float: right;text-align: right;">
+								555555555555555555555555555555555健身房还多久卡萨返回看电视副科级的火山口服活动结束开发换角色看到回复金卡戴珊焚枯食淡和福克斯地方斯蒂芬
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font>lostsky2：</font>
+							<span>
+								666666666666健身房还多久卡萨返回看电视副科级的火山口服活动结束开发换角色看到回复金卡戴珊焚枯食淡和福克斯地方斯蒂芬
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font>lostsky2：</font>
+							<span>
+								44444444444444444444444444444444444444444444444444444444444444
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font style="float: right;text-align: right;">：lostsky2</font>
+							<span style="float: right;text-align: right;">
+								555555555555555555555555555555555健身房还多久卡萨返回看电视副科级的火山口服活动结束开发换角色看到回复金卡戴珊焚枯食淡和福克斯地方斯蒂芬
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font>lostsky2：</font>
+							<span>
+								666666666666健身房还多久卡萨返回看电视副科级的火山口服活动结束开发换角色看到回复金卡戴珊焚枯食淡和福克斯地方斯蒂芬
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font>lostsky2：</font>
+							<span>
+								44444444444444444444444444444444444444444444444444444444444444
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font style="float: right;text-align: right;">：lostsky2</font>
+							<span style="float: right;text-align: right;">
+								555555555555555555555555555555555健身房还多久卡萨返回看电视副科级的火山口服活动结束开发换角色看到回复金卡戴珊焚枯食淡和福克斯地方斯蒂芬
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font>lostsky2：</font>
+							<span>
+								666666666666健身房还多久卡萨返回看电视副科级的火山口服活动结束开发换角色看到回复金卡戴珊焚枯食淡和福克斯地方斯蒂芬
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font>lostsky2：</font>
+							<span>
+								44444444444444444444444444444444444444444444444444444444444444
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font style="float: right;text-align: right;">：lostsky2</font>
+							<span style="float: right;text-align: right;">
+								555555555555555555555555555555555健身房还多久卡萨返回看电视副科级的火山口服活动结束开发换角色看到回复金卡戴珊焚枯食淡和福克斯地方斯蒂芬
+							</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<font>lostsky2：</font>
+							<span>
+								666666666666健身房还多久卡萨返回看电视副科级的火山口服活动结束开发换角色看到回复金卡戴珊焚枯食淡和福克斯地方斯蒂芬
+							</span>
+						</p>
+					</li>
+				</ul>
+			</div>
+			<div class="talk-bottom">
+				<textarea></textarea>
+				<button type="button">发送</button>
 			</div>
 		</div>
 	</div>
