世界聊天模块完成

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		</div>
 		<div class="talk">
 			<div class="talk-top">
-				<div class="talk-name" id="ltalk-name">(空)</div>
+				<div class="talk-name" id="ltalk-name"></div>
 			</div>
 			<div class="talk-content" id="ltalk">
 				<p class="msg-init">选择一位好友，开始聊天吧！</p>
@@ -73,14 +73,7 @@
 			</div>
 			<div class="talk-content">
 				<ul id="world-talk">
-					<!--<li>-->
-						<!--<p>-->
-							<!--<font>lostsky2：</font>-->
-							<!--<span>-->
-								<!--房还多久卡萨返回看电视副-->
-							<!--</span>-->
-						<!--</p>-->
-					<!--</li>-->
+
 				</ul>
 			</div>
 			<div class="talk-bottom">
