--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="all">
 		<div class="user-info">
 			<div class="statistics">
-				<p>在线人数<span></span></p>
+				<p>当前连接数<span></span></p>
 			</div>
 		</div>
 		<div class="friend">
