点击聊天获取人名

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
 				<input type="hidden" id="msg-number">
 
 				<textarea id="msg"></textarea>
-				<button type="button" id="msg-button">发送</button>
+				<div class="talk-bottom-btn">
+					<span>Shift+Enter发送数据</span>
+					<button type="button" id="msg-button">发送</button>
+				</div>
 			</div>
 		</div>
 		<div class="world">
@@ -78,7 +81,10 @@
 			</div>
 			<div class="talk-bottom">
 				<textarea id="world-msg"></textarea>
-				<button type="button" id="world-button">发送</button>
+				<div class="talk-bottom-btn">
+					<span>Shift+Enter发送数据</span>
+					<button type="button" id="world-button">发送</button>
+				</div>
 			</div>
 		</div>
 	</div>
