修改发送方式，使世界模块与好友模块发送不关联

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 				<textarea id="msg"></textarea>
 				<div class="talk-bottom-btn">
-					<span>Shift+Enter发送数据</span>
+					<span>Enter发送数据 </span>
 					<button type="button" id="msg-button">发送</button>
 				</div>
 			</div>
@@ -82,7 +82,7 @@
 			<div class="talk-bottom">
 				<textarea id="world-msg"></textarea>
 				<div class="talk-bottom-btn">
-					<span>Shift+Enter发送数据</span>
+					<span>Enter发送数据 </span>
 					<button type="button" id="world-button">发送</button>
 				</div>
 			</div>
