--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="talk-top">
 				<div class="talk-name">World</div>
 			</div>
-			<div class="talk-content">
+			<div class="talk-content" id="world-talk-content">
 				<ul id="world-talk">
 
 				</ul>
