--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
 			<div class="statistics">
 				<p>当前连接数<span></span></p>
 			</div>
+			<img src="src/img/pic.png" alt="" class="pic">
+			<input type="hidden" id="mynickname">
+			<input type="hidden" id="mynumber">
+			<input type="hidden" id="last_login">
 		</div>
 		<div class="friend">
 			<div class="friend-top">
-				<div class="friend-top-left">好友 <i class="fa fa-plus-square add-friends"></i></div>
+				<div class="friend-top-left">
+					好友
+					<i class="fa fa-plus-square add-friends"></i></div>
 				<div class="friend-top-right">
 					群组
 					<i class="fa fa-plus-square btn-group"></i>
@@ -45,7 +51,7 @@
 					<!--</div>-->
 				<!--</div>-->
 			</div>
-			<div id="group-list">
+			<div id="group-list" style="display: none;">
 
 			</div>
 
